# hypergrad

./: LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml  publish.yml  tests.yml
docs/: index.md  solver.md
docs/javascripts/: mathjax.js
examples/: README.md  dataset_distillation.py  logistic_regression.py
hypergrad/: approx_hypergrad.py  approximate_ihvp.py  optimizers.py  solver.py  utils.py
tests/: __init__.py  test_optimizers.py  test_utils.py
